[gd_scene load_steps=2 format=3 uid="uid://c8yvxr13yvqnbx"]

[ext_resource type="Script" uid="uid://k81nhdfed5jf" path="res://scenes/test/event_test.gd" id="1_yvnbx"]

[node name="EventTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yvnbx")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "事件测试场景"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EventList" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 80.0
offset_right = 320.0
offset_bottom = 580.0

[node name="VBoxContainer" type="VBoxContainer" parent="EventList"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EventListTitle" type="Label" parent="EventList/VBoxContainer"]
layout_mode = 2
text = "事件列表"
horizontal_alignment = 1

[node name="EventDisplay" type="Panel" parent="."]
layout_mode = 0
offset_left = 340.0
offset_top = 80.0
offset_right = 1260.0
offset_bottom = 580.0

[node name="EventTitle" type="Label" parent="EventDisplay"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 36.0
grow_horizontal = 2
text = "事件详情"
horizontal_alignment = 1

[node name="EventContent" type="RichTextLabel" parent="EventDisplay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "选择一个事件查看详情..."

[node name="OptionContainer" type="VBoxContainer" parent="EventDisplay"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -100.0
offset_right = 400.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="ButtonPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -100.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="ButtonPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TestEventButton" type="Button" parent="ButtonPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "测试事件"

[node name="RandomEventButton" type="Button" parent="ButtonPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "随机事件"

[node name="ResetButton" type="Button" parent="ButtonPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "重置"

[node name="BackButton" type="Button" parent="ButtonPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "返回"

[connection signal="pressed" from="ButtonPanel/HBoxContainer/TestEventButton" to="." method="_on_test_event_button_pressed"]
[connection signal="pressed" from="ButtonPanel/HBoxContainer/RandomEventButton" to="." method="_on_random_event_button_pressed"]
[connection signal="pressed" from="ButtonPanel/HBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="ButtonPanel/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
